More bug fixes for the layout of the page. It should now feel much more responsive and should show scrollbars in the correct parts of the page.

--- a/frontend/static/styles/main.css
+++ b/frontend/static/styles/main.css
@@ -616,7 +616,6 @@ main.collapsed {
     color: white;
     z-index: 999;
     transition: width 0.3s ease;
-    padding-bottom: 3rem;
 }
 
 .sidebar.collapsed .sidebar-footer {
@@ -1260,7 +1259,7 @@ label {
 }
 
 .card:not(.card .card) {
-    margin: 1rem;
+    margin-top: 1rem;
 }
 
 th,
